@@ -107,6 +107,7 @@ Version 1.5
  - Add NodOn MSP-3-1-XX Micro Smart Plug from sarakha63 (Nechry)
  - Add Zipato PH-PAB01.eu Micromodule Energy Meter (Nechry)
  - Add Zipato MH-P210 Mini Energy Dimmer, Mcohome branded (Nechry)
+ - Add WiDom WDS Universal Double Switch (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
